--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header Start -->
     <header>
         <nav>
-            <h3>G3 Architects</h3>
+            <h3 class="common-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -48,6 +48,7 @@
                 </div>
             </div>
         </section>
+        
 
     </main>
     <footer>
