--- a/index.html
+++ b/index.html
@@ -48,7 +48,43 @@
                 </div>
             </div>
         </section>
-        
+
+        <!-- Features section -->
+        <section>
+            <div class="features-container">
+                <div class="features-text">
+
+                    <h1 class="common-title features-title">Features you will love & enjoy</h1>
+                    <p class="common-description features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                    <div class="features-box">
+                        <h3 class="features-common-title">Dexktop & Mobile Version</h3>
+                        <p class="common-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-box">
+                        <h3 class="features-common-title">Drag & Drop Builder</h3>
+                        <p class="common-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-box">
+                        <h3 class="features-common-title">Awesome Modern Design</h3>
+                        <p class="common-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-box">
+                        <h3 class="features-common-title">Super Easy to Edit</h3>
+                        <p class="common-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+
+                </div>
+
+                <div class="features-images">
+                    <img src="images/architect.png" alt="">
+                    <div class="experience-container">
+                        <h1 class="experience-year">10+ Year</h1>
+                        <h4 class="experience-text">Experience</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
