add sponsors section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
 
         <!-- Features section -->
-        <section>
+        <!-- <section>
             <div class="features-container">
                 <div class="features-text">
 
@@ -78,10 +78,60 @@
 
                 <div class="features-images">
                     <img src="images/architect.png" alt="">
-                    <div class="experience-container">
+                    <!-- <div class="experience-container">
                         <h1 class="experience-year">10+ Year</h1>
                         <h4 class="experience-text">Experience</h4>
                     </div>
+                </div>
+            </div>
+        </section> -->
+
+
+
+
+
+        <section>
+            <div class="facts-section">
+                <h1 class="common-title facts-title">Some Facts</h1>
+                <p class="common-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title">Email Send</p>
+            </div>
+            </div>
+        </section>
+
+        <!-- Sponsors section -->
+
+        <section>
+            <div class="sponsors-section">
+                <h1 class="common-title sponsors-title">Our Sponspors</h1>
+                <p class="common-description sponsors-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+                <div class="sponsors-image-container">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
                 </div>
             </div>
         </section>
