--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
 
         <!-- Features section -->
-        <!-- <section>
+        <section>
             <div class="features-container">
                 <div class="features-text">
 
@@ -78,13 +78,13 @@
 
                 <div class="features-images">
                     <img src="images/architect.png" alt="">
-                    <!-- <div class="experience-container">
+                     <div class="experience-container">
                         <h1 class="experience-year">10+ Year</h1>
                         <h4 class="experience-text">Experience</h4>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
 
 
