--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="features-container">
                 <div class="features-text">
 
-                    <h1 class="common-title features-title">Features you will love & enjoy</h1>
+                    <h1 class="common-title features-title">Features you will <br> love & enjoy</h1>
                     <p class="common-description features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 
                     <div class="features-box">
