finish the page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
-                <p class="common-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="common-description banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
             <div class="banner-img">
@@ -138,7 +138,9 @@
 
     </main>
     <footer>
-
+        <div class="footer">
+            <p class="footer-text">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 </html>
